Bug 491700 - Some default keybindings clash with each other
Summary: Some default keybindings clash with each other
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.1.4
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: junior-jobs, usability
: 485238 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-14 05:29 UTC by Antti Savolainen
Modified: 2025-02-22 21:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Savolainen 2024-08-14 05:29:59 UTC
SUMMARY
Demonstrative video https://youtu.be/PZ0IoDrvrTk
The default shortcuts for "Activate Task Manager Entry 10" and "Zoom to Actual Size" clash with each other. Also "Manually Invoke Action on Current Clipboard" and "Record Window" clash. This is on a system where shortcuts have been reset by deleting the shortcut settings file.

STEPS TO REPRODUCE
1. Reset keybindings to default

OBSERVED RESULT
"Activate Task Manager Entry 10" and "Zoom to Actual Size" clash with each other.
"Manually Invoke Action on Current Clipboard" and "Record Window" clash with each other.

EXPECTED RESULT
No keybindings should clash

SOFTWARE/OS VERSIONS
Linux: Arch Linux
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Comment 1 Bug Janitor Service 2024-10-19 17:30:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4854
Comment 2 Nate Graham 2024-10-22 16:05:16 UTC
Git commit 222e8594f9d6253c0262b270dcd045683a8a8c89 by Nate Graham, on behalf of Zhangzhi Hu.
Committed on 22/10/2024 at 16:05.
Pushed by ngraham into branch 'master'.

Fix default keybindings clash

### Reason for the change

<!--
If this merge request change is resolving a problem, describe the problem and explain why the approach taken here is the correct way to resolve it.

If the merge request adds a new feature or UI change, explain the benefits of the change.
-->

Currently, the default shortcuts for "Activate Task Manager Entry 10" and "Zoom to Actual Size" clash with each other. Also "Manually Invoke Action on Current Clipboard" and "Record Window" clash.

Remove the default shortcut of "Activate Task Manager Entry 10" & "Manually Invoke Action on Current Clipboard" to fix this bug.

### Test plan

<!--
Extend any related autotests with new test cases to validate your changes. If none exist, consider adding one if you have the technical skills to do so.

Otherwise, at least describe how you tested the change, and how someone reviewing this merge request can test it themselves. No need to mention obvious things like "Apply the changes".
-->

### Screenshots or screen recordings

<!--
If this merge request introduces a visual change, please add before-and-after screenshots in the following format:

| Before | After |
| ------ | ----- |
| [drag "before" screenshot here] | [drag "after" screenshot here] |
-->

### Bugs fixed

<!--
If the changes in this merge request fix any Bugzilla tickets, add the following keyword for each one:
-->

M  +1    -1    klipper/klipper.cpp
M  +1    -1    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/222e8594f9d6253c0262b270dcd045683a8a8c89
Comment 3 Nate Graham 2025-02-22 21:14:12 UTC
*** Bug 485238 has been marked as a duplicate of this bug. ***